# open-source-polarion-python-repo-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  renovate.json  sonar-project.properties  tox.ini  zizmor.yml
.github/workflows/: add-issue-to-project.yml  ci.yml  claude.yml  poetry-build.yml  pr.yml  release-please.yml
open_source_polarion_python_repo_template/: dummy.py
tests/: test_dummy.py
