[project]
name = "open-source-polarion-python-repo-template"
version = "0.0.0"  # the version is controlled by the pipeline
description = ""
authors = [
    { name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
homepage = "https://github.com/SchweizerischeBundesbahnen/open-source-polarion-python-repo-template"
repository = "https://github.com/SchweizerischeBundesbahnen/open-source-polarion-python-repo-template"
requires-python = ">=3.13"
[tool.poetry.dependencies]
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
ruff = "0.15.0"
mypy = "1.19.1"

[tool.poetry.group.test.dependencies]
tox = "4.34.1"
pytest = "9.0.2"
coverage = "7.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
fix = true
show-fixes = true

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101" # No assert rule (bandit)
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = "tests/.*"
